:ambulance: delete and update own book
