# config/swagger_output.json
@@ -115,19 +115,125 @@
                 "name": "main"
               }
             }
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       }
     },
     "/api/users/": {
       "get": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "USER"
+        ],
+        "description": "Only Admin can update a user or User can update his account",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      },
+      "patch": {
+        "tags": [
+          "USER"
+        ],
+        "description": "Only Admin can update a user or User can update his account",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Update user",
+            "required": true,
+            "type": "obj",
+            "schema": {
+              "$ref": "#/definitions/USER"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Response body",
+            "schema": {
+              "$ref": "#/definitions/AUTH_RESPONSE"
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Password or Email is wrong",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "msg": {
+                  "type": "string",
+                  "example": "Email or password is wrong"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "USER"
+        ],
+        "description": "Only Admin can update a user or User can update his account",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Response body",
+            "schema": {
+              "$ref": "#/definitions/AUTH_RESPONSE"
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Password or Email is wrong",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "msg": {
+                  "type": "string",
+                  "example": "Email or password is wrong"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     },
     "/api/users/shelf": {
@@ -154,6 +260,9 @@
             "schema": {
               "$ref": "#/definitions/AUTH_RESPONSE"
             }
+          },
+          "201": {
+            "description": "Created"
           },
           "400": {
             "description": "Password or Email is wrong",
@@ -243,72 +352,11 @@
             "type": "string"
           },
           {
-            "name": "description",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "schema",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Response body",
-            "schema": {
-              "$ref": "#/definitions/AUTH_RESPONSE"
-            }
-          },
-          "400": {
-            "description": "Password or Email is wrong",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "success": {
-                  "type": "boolean",
-                  "example": false
-                },
-                "msg": {
-                  "type": "string",
-                  "example": "Email or password is wrong"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "apiKeyAuth": []
-          }
-        ]
-      }
-    },
-    "/api/users/{id}": {
-      "patch": {
-        "tags": [
-          "USER"
-        ],
-        "description": "Only Admin can update a user or User can update his account",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
             "name": "body",
-            "in": "body",
-            "description": "Update user",
+            "in": "path",
+            "description": "Remove book from user shelf",
             "required": true,
-            "type": "obj",
-            "schema": {
-              "$ref": "#/definitions/USER"
-            }
+            "type": "obj"
           }
         ],
         "responses": {
@@ -317,6 +365,9 @@
             "schema": {
               "$ref": "#/definitions/AUTH_RESPONSE"
             }
+          },
+          "201": {
+            "description": "Created"
           },
           "400": {
             "description": "Password or Email is wrong",
@@ -343,19 +394,6 @@
             "apiKeyAuth": []
           }
         ]
-      },
-      "delete": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
       }
     },
     "/api/authors/": {
@@ -621,13 +659,7 @@
                   "example": true
                 },
                 "payload": {
-                  "type": "array",
-                  "example": [
-                    "Books"
-                  ],
-                  "items": {
-                    "type": "string"
-                  }
+                  "$ref": "#/definitions/AUTHOR"
                 }
               },
               "xml": {
@@ -668,84 +700,195 @@
     },
     "/api/books/my-books": {
       "get": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "BOOK"
+        ],
+        "description": "Get your own created book",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Response body",
+            "schema": {
+              "$ref": "#/definitions/AUTH_RESPONSE"
+            }
+          },
+          "400": {
+            "description": "Password or Email is wrong",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "msg": {
+                  "type": "string",
+                  "example": "Email or password is wrong"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     },
     "/api/books/": {
       "get": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "BOOK"
+        ],
+        "description": "Fetch all books",
         "parameters": [
           {
-            "name": "page",
+            "name": "description",
             "in": "query",
             "type": "string"
           },
           {
-            "name": "pageSize",
+            "name": "schema",
             "in": "query",
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Response body",
+            "schema": {
+              "$ref": "#/definitions/AUTH_RESPONSE"
+            }
+          },
+          "400": {
+            "description": "Password or Email is wrong",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "msg": {
+                  "type": "string",
+                  "example": "Email or password is wrong"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       },
       "post": {
-        "tags": [],
+        "tags": [
+          "BOOK"
+        ],
         "description": "",
         "parameters": [
           {
-            "name": "obj",
+            "name": "body",
             "in": "body",
+            "description": "create your own book",
+            "required": true,
+            "type": "obj",
             "schema": {
-              "type": "object",
-              "properties": {
-                "author": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/LOG_IN"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Response body",
+            "schema": {
+              "$ref": "#/definitions/AUTH_RESPONSE"
+            }
+          },
+          "400": {
+            "description": "Password or Email is wrong",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "msg": {
+                  "type": "string",
+                  "example": "Email or password is wrong"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     },
     "/api/books/search": {
       "get": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "BOOK"
+        ],
+        "description": "search book",
         "parameters": [
           {
-            "name": "title",
+            "name": "description",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "schema",
             "in": "query",
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Response body",
+            "schema": {
+              "$ref": "#/definitions/AUTH_RESPONSE"
+            }
+          },
+          "400": {
+            "description": "Password or Email is wrong",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "msg": {
+                  "type": "string",
+                  "example": "Email or password is wrong"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
     },
     "/api/books/{id}": {
       "get": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "BOOK"
+        ],
+        "description": "fetch book by id",
         "parameters": [
           {
             "name": "id",
@@ -756,33 +899,77 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Response body",
+            "schema": {
+              "$ref": "#/definitions/AUTH_RESPONSE"
+            }
+          },
+          "400": {
+            "description": "Password or Email is wrong",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "msg": {
+                  "type": "string",
+                  "example": "Email or password is wrong"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       },
       "patch": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "BOOK"
+        ],
+        "description": "Registerd users can proced this action",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Update book",
+            "required": true,
+            "type": "obj",
+            "schema": {
+              "$ref": "#/definitions/LOG_IN"
+            }
           }
         ],
         "responses": {
           "201": {
             "description": "Created"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "404": {
             "description": "Not Found"
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       },
       "delete": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "BOOK"
+        ],
+        "description": "Delete your own created book",
         "parameters": [
           {
             "name": "id",
@@ -791,43 +978,117 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "Response body",
+            "schema": {
+              "$ref": "#/definitions/AUTH_RESPONSE"
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Password or Email is wrong",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "msg": {
+                  "type": "string",
+                  "example": "Email or password is wrong"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     },
     "/api/books/comment": {
       "post": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "COMMENT"
+        ],
+        "summary": "post comment",
+        "description": "Registerd users can proced this action",
+        "operationId": "Your_operationId_here",
         "parameters": [
           {
-            "name": "obj",
+            "name": "body",
             "in": "body",
+            "description": "Post comment",
+            "required": true,
+            "type": "obj",
             "schema": {
-              "type": "object",
-              "properties": {
-                "bookId": {
-                  "example": "any"
-                },
-                "text": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/COMMENT"
             }
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     },
-    "/api/": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {}
+    "/api/books/comment/{id}": {
+      "delete": {
+        "tags": [
+          "COMMENT"
+        ],
+        "summary": "post comment",
+        "description": "Registerd users can proced this action",
+        "operationId": "Your_operationId_here",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Post comment",
+            "required": true,
+            "type": "obj",
+            "schema": {
+              "$ref": "#/definitions/COMMENT"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     }
   },
@@ -1000,7 +1261,8 @@
           "type": "string",
           "example": "werfgnsbxjj65wd656"
         }
-      },
+      }
+    },
     "AUTHOR": {
       "type": "object",
       "properties": {
@@ -1036,6 +1298,23 @@
       "required": [
         "firstName",
         "lastName"
+      ]
+    },
+    "COMMENT": {
+      "type": "object",
+      "properties": {
+        "text": {
+          "type": "string",
+          "example": "William Shakespeare kitoblarini sevib o'qiyman"
+        },
+        "bookId": {
+          "type": "string",
+          "example": "s54s8jm659fih9hi56pk"
+        }
+      },
+      "required": [
+        "text",
+        "bookId"
       ]
     }
   }
