# routes/books.js
@@ -10,6 +10,7 @@ router.get('/search', searchBooks);
 router.get('/:id', fetchBookById);
 router.post('/', multer.single('image'), currentUser, create);
 router.post('/comment', currentUser, createComment);
+router.delete('/comment/:id', isOwner, currentUser, createComment);
 router.patch('/:id', currentUser, isOwner, updateBook);
 router.delete('/:id', currentUser, isOwner, deleteBook);
 module.exports = router;
